kubernetes/applications/healthcheck/healthcheck.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: healthcheck
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck
  namespace: healthcheck
spec:
  selector:
    matchLabels:
      app: healthcheck
  template:
    metadata:
      labels:
        app: healthcheck
    spec:
      containers:
      - name: healthcheck
        image: ghcr.io/toof-jp/healthcheck:sha-dcab9ef
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: healthcheck
  namespace: healthcheck
spec:
  selector:
    app: healthcheck
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck
  namespace: healthcheck
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: healthcheck.toof.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healthcheck
            port:
              number: 8080
